# Open_AlteryxYXDB

./: .gitignore  CMakeLists.txt  Open_AlteryxYXDB.h  Open_AlteryxYXDB.vcxproj  SrcLib_Replacement.h  Test.cpp  Test.py  lzf_src.h  stdafx.h  windows-build.bat
Node.js/: CMakeLists.txt  n-api-sandbox.cpp  n-api-sandbox.h  napi-thread-safe-callback-config.cmake  node-addon-api-config.cmake  package.json
Node.js/lib/: binding.js
Node.js/napi-thread-safe-callback/: napi-thread-safe-callback-impl.hpp
Node.js/napi-thread-safe-callback/test/: tests.cpp
Node.js/test/: test.js  test_binding.js
Python/: CMakeLists.txt  DllExport.h  ExportPythonSDK.cpp  ExportPythonSDK.h  Field.cpp  Field.h  RecordCreator.cpp  RecordCreator.h  RecordInfo.cpp  RecordInfo.h  RecordRef.cpp  RecordRef.h
R/anRpackage/: DESCRIPTION
R/anRpackage/R/: RcppExports.R
R/anRpackage/data/: test.yxdb
R/anRpackage/src/: Makevars.win  Test.cpp
R/anRpackage/src-i386/: FieldTypes.h  Record.cpp  SrcLib_Replacement.h
R/anRpackage/src-x64/: Open_AlteryxYXDB.cpp  RcppExports.cpp  Test.cpp
R/rcppExample/: .RData  DESCRIPTION  NAMESPACE  README.md  rcppExample.Rproj
R/rcppExample/R/: RcppExports.R  hellocpp.R
R/rcppExample/src/: Makevars  RcppExports.cpp  hellocpp.cpp
RecordLib/: CMakeLists.txt  RecordObj.h
liblzf-3.6/: CMakeLists.txt
